--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chainlink/contracts": "^0.6.1",
     "@openzeppelin/contracts": "^2.5.0",
     "dotenv": "^16.0.3",
+    "hardhat-gas-reporter": "^2.2.0",
     "node-fetch": "^2.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
